--- a/src/blocks/location/location.styl
+++ b/src/blocks/location/location.styl
@@ -1,3 +1,6 @@
+$banner-background-color = #E75735;
+$banner-text-color = #FFF;
+
 .location
 	width: 44.6%;
 
@@ -6,9 +9,9 @@
 
 	&__banner
 		display: flex;
-		background-color: #e75735;
-		font-family: LatoWebLight;
-		color: white;
+		background-color: $banner-background-color;
+		font-family: LatoWebLight, 'Arial';
+		color: $banner-background-color ;
 		padding-top: 3%;
 		padding-bottom: 3%;
 
@@ -21,7 +24,7 @@
 
 	&__adress
 		text-transform: uppercase;
-		font-family: LatoWebBlack;
+		font-family: LatoWebBlack, 'Arial';
 		font-size: 0.85rem;
 		padding-left: 4.5%;
 		padding-right: 10.5%;
