--- a/src/blocks/percentages/percentages.pug
+++ b/src/blocks/percentages/percentages.pug
@@ -1,4 +1,5 @@
 mixin percentages(percent)
-	<span class="percentages" data-percent=#{percent}>
-		<span class="percentages__percent"></span>
-	</span>
+	div.percentages__position-vertical
+		span(class="percentages" data-percent= percent)
+				span.percentages__percent
+
