--- a/src/blocks/slider-discret/slider-discret.styl
+++ b/src/blocks/slider-discret/slider-discret.styl
@@ -1,4 +1,4 @@
-$max-width = 260px;
+$max-width = 277px;
 
 .rangeslider-discret 
 	display: block;
@@ -41,7 +41,7 @@ $max-width = 260px;
 		position: absolute;
 		top: 100%;
 		text-align: justify;
-		font-family: LatoWebBlack;
+		font-family: LatoWebBlack, 'Arial';
 		color: #E6E6E6;
 		padding-top: 0.7rem;
 		width: $max-width + 10px;
