--- a/src/blocks/event/event.styl
+++ b/src/blocks/event/event.styl
@@ -1,10 +1,13 @@
+$event-background-color = #E75735;
+$text-color = #FFF;
+
 .event
 	display: flex;
 	height: 13.3rem;
 	max-width: 18rem;
 
 	&__photo
-		background: #e75735;
+		background: $event-background-color;
 		width: 33%;
 		object-fit: cover;
 
@@ -12,12 +15,12 @@
 		display: flex;
 		flex-direction: column;
 		padding: 4.5% 7% 1.5%;
-		background-color: #e75735;
-		color: white;
+		background-color: $event-background-color;
+		color: $text-color;
 
 	&__date
 		display: inline-flex;
-		font-family: LatoWebLight;
+		font-family: LatoWebLight, 'Arial';
 		padding-bottom: 4%;
 		align-items: baseline;
 
