--- a/src/blocks/messager/messager.styl
+++ b/src/blocks/messager/messager.styl
@@ -1,13 +1,28 @@
+$messager-background-color = #F2F2F2;
+
+$friend-information-background-color = #28A290;
+$friend-photo-border-color = #E5E5E5;
+$friend-name-color = #FFF;
+$friend-actions-color = #8E8D8D;
+
+
+$message-background-color = #FFF;
+
+$textarea-background-color = #e5e5e5;
+$textarea-border-color = #fff;
+$textarea-color = #868686;
+$textarea-focus-color = #fff;
+
 .messager
 	box-sizing: border-box;
 	width: 100%;
 	max-width: 18rem;
-	background: #f2f2f2;
+	background: $messager-background-color;
 
 	&__friend-information
 		display: flex;
 		justify-content: center;
-		background: #28A290;
+		background: $friend-information-background-color;
 		height: 2.15rem;
 
 		&_photo
@@ -15,7 +30,7 @@
 			height: 88px;
 			background-size: cover;
 			background-position: center;
-			border: 3px solid #E5E5E5;
+			border: 3px solid $friend-photo-border-color;
 			border-radius: 50%;
 
 	&__vertical-position
@@ -26,7 +41,7 @@
 		display: flex;
 		justify-content: space-between;
 		font-family: FontAwesome;
-		color: #8e8d8d;
+		color: $friend-actions-color;
 		font-size: 1.4rem;
 		padding: 7.1% 9% 2%;
 
@@ -45,9 +60,9 @@
 
 		&_name
 			text-align: center;
-			background-color: #4eb7a8;
-			color: #fff;
-			font-family: LatoWebLight;
+			background-color: $friend-information-background-color;
+			color: $friend-name-color;
+			font-family: LatoWebLight, 'Arial';
 			font-size: 1.9rem;
 			padding: 7% 0 9%;
 
@@ -91,10 +106,10 @@
 
 
 	&__chat_friend .messager__message
-		background: #fff;
+		background: $message-background-color;
 
 	&__chat_self .messager__message
-		background: #fff;
+		background: $message-background-color;
 
 	&__chat_self
 		justify-content: flex-end;
@@ -106,17 +121,17 @@
 		padding: 6.5%;
 
 	&__form textarea
-			background-color: #e5e5e5;
+			background-color: $textarea-background-color;
 			height: 5rem;
-			border: 3px solid #fff;
+			border: 3px solid $textarea-border-color;
 			border-radius: 3px;
 			resize: none;
 			font-size: 0.9rem;
-			font-family: LatoWebBold;
-			color: #868686;
+			font-family: LatoWebBold, 'Arial';
+			color: $textarea-color;
 			box-sizing: border-box;
 			width: 100%;
 			outline: none;
 
 	&__form textarea:focus
-		background: #fff;
+		background: $textarea-focus-color;
