--- a/src/blocks/percentages/percentages.styl
+++ b/src/blocks/percentages/percentages.styl
@@ -7,6 +7,11 @@ $percent-color = #b1b1b1;
 	height: 110px;
 	text-align: center;
 
+	&__position-vertical
+		position: relative; 
+		bottom: 2rem;
+		display: inline-block;
+
 	canvas 
 		position: absolute;
 		top: 0;
@@ -18,5 +23,5 @@ $percent-color = #b1b1b1;
 		z-index: 2;
 		font-size: 2.5rem;
 		color: $percent-color;
-		font-family: LatoWebLight;
+		font-family: LatoWebLight, 'Arial';
 
