--- a/src/blocks/search/search.styl
+++ b/src/blocks/search/search.styl
@@ -1,3 +1,7 @@
+$input-text-color = #888;
+$not-found-background-color = #E75735;
+$submit-text-color = #FFF;
+
 .search
 	max-width: 18rem;
 
@@ -6,7 +10,7 @@
 
 	&__input
 		width: 100%;
-		color: #888888;
+		color: $input-text-color;
 		border-top-left-radius: 4px;
 		border-bottom-left-radius: 4px;
 		font-family: SourceSansPro-Regular, 'Arial';
@@ -17,7 +21,7 @@
 		outline: none;
 
 		&_not-found
-			background-color: #e75735;
+			background-color: $not-found-background-color;
 
 			&::placeholder
 				color: white;
@@ -30,7 +34,7 @@
 
 	&__submit
 		font-family: FontAwesome;
-		background-color: #e75735;
+		background-color: $not-found-background-color;
 		border-top-right-radius: 4px;
 		border-bottom-right-radius: 4px;
 		width: 2.45rem;
@@ -39,5 +43,5 @@
 
 		&:after
 			content '\f002'
-			color: white;
+			color: $submit-text-color;
 
