--- a/src/blocks/slider-continuous/slider-continuous.styl
+++ b/src/blocks/slider-continuous/slider-continuous.styl
@@ -1,4 +1,7 @@
-$max-width = 260px;
+$bubble-text-color = #FFF;
+$slider-color = #E75735;
+
+$max-width = 277px;
 
 .rangeslider-continuous
 	display: block;
@@ -10,7 +13,7 @@ $max-width = 260px;
 	width: 100%;
 
 	&__handle 
-		background: #e75735;
+		background: $slider-color;
 		cursor: pointer;
 		display: inline-block;
 		width: 20px;
@@ -24,7 +27,7 @@ $max-width = 260px;
 
 
 	&_horizontal 
-		max-width: $max-width;
+		max-width: 277px;
 		height: 5px;
 		width: 100%;
 		touch-action: pan-y;
@@ -41,13 +44,13 @@ $max-width = 260px;
 	-ms-transform: translate(-50%, 0);
 	text-align: center;
 	border-radius: 20%;
-	background-color: #e75735;
+	background-color: $slider-color;
 	padding: 0.3rem 0.65rem;
-	color: #fff;
+	color: $bubble-text-color;
 	width: auto;
 	margin: 0;
 	white-space: nowrap;
-	font-family: LatoWebBlack;
+	font-family: LatoWebBlack, 'Arial';
 	font-size: 0.8rem;
 }
 
@@ -57,7 +60,7 @@ $max-width = 260px;
 	height: 0;
 	border-left: 0.9rem solid transparent;
 	border-right: 0.9rem solid transparent;
-	border-top: 1rem solid #e75735;
+	border-top: 1rem solid $slider-color;
 	position: absolute;
 	top: auto;
 	left: 50%;
