--- a/src/blocks/tick-box/tick-box.styl
+++ b/src/blocks/tick-box/tick-box.styl
@@ -1,10 +1,13 @@
+$text-color = #c0c0c0;
+$background-color = #E5E5E5;
+
 .tick-box
 	margin-right: 20px;
 	width: 1.5rem;
 	height: 1.5rem;
 	border-radius: 50%;
-	background: #e5e5e5;
-	color: #c0c0c0;
+	background: $background-color;
+	color: $text-color;
 	text-align: center;
 	font-size: 1rem;
 	line-height: 1.6rem;
@@ -12,6 +15,7 @@
 	transition: background .15s ease-in,
 							color .15s ease-in;
 	font-family: FontAwesome;
+	display: inline-block;
 
 	&:after
 		content: '\f00c';
