Доделана разметка страницы

--- a/src/blocks/location/location.styl
+++ b/src/blocks/location/location.styl
@@ -2,7 +2,6 @@ $banner-background-color = #E75735;
 $banner-text-color = #FFF;
 
 .location
-	width: 44.6%;
 
 	&__map
 		height: 12.3rem;
@@ -11,7 +10,7 @@ $banner-text-color = #FFF;
 		display: flex;
 		background-color: $banner-background-color;
 		font-family: LatoWebLight, 'Arial';
-		color: $banner-background-color ;
+		color: $banner-text-color ;
 		padding-top: 3%;
 		padding-bottom: 3%;
 
