--- a/src/blocks/messager/messager.styl
+++ b/src/blocks/messager/messager.styl
@@ -73,6 +73,9 @@ $textarea-focus-color = #fff;
 		margin-top: 2%;
 		width: 100%;
 
+		& .standart-button
+			width: 100%;
+
 	&__chatlogs
 		width: 100%;
 		max-height: 9rem;
