--- a/src/blocks/calendar/calendar.styl
+++ b/src/blocks/calendar/calendar.styl
@@ -14,6 +14,7 @@ $button-today-color = #E5E5E5;
 
 	& .ui-datepicker
 		padding: 0;
+		max-width: 17rem;
 
 	& .ui-datepicker table
 		margin: 0 0 .1em;
