--- a/src/blocks/container/container.styl
+++ b/src/blocks/container/container.styl
@@ -1,19 +1,17 @@
 .container
 	margin: 0 auto;
-	width 707px;
+	width 700px;
 
 	h2
 		text-transform: uppercase;
 		display: block;
 		text-align: center;
-		font-family: LatoWebBlack;
-		font-size: 1.25rem;
-
-	.standart-button
-		margin-left: 24px;
+		font-family: LatoWebBlack, 'Arial';
+		font-size: 1.2rem;
 
 	.percentages
 		margin-left: 20px;
+		bottom: 2rem;
 
 	.pie-chart
 		margin-left: 24px;
@@ -21,8 +19,56 @@
 	.arrow-button
 		margin-left: 24px;
 
+	.sliders
+		padding-left: 10%;
+		padding-bottom: 6%;
+
+	& .search,
+	& .drop-down,
+	& .calendar,
+	& .news,
+	& .feedback,
+	& .user-profile
+		padding-left: 16%;
+
+	& .rangeslider-continuous_horizontal,
+	& .rangeslider-discret_horizontal
+		left: 16%;
+
+	& .search,
+	& .drop-down
+		margin-bottom: 4.5%;
+
+	& .feedback
+		margin-bottom: 2%;
+
+	& .user-profile
+		margin-top: 8%;
+
+	& .event, & .messager__container
+		padding-left: 10%;
+
+	& .news, .event
+		text-align: left;
+
+	& .location
+		padding-right: 3.5%;
+		padding-left: 7.5%;
+
+	& .video
+		padding-left: 5%;
+
 	&__center
 		text-align: center;
+
+		& > .standart-button
+			margin-left: 24px;
+
+		& h2
+			padding-left: 3.5%;
+
+		& .container__left h2
+			padding-left: 15%;
 
 	&__left
 		width: 50%;
@@ -32,6 +78,44 @@
 		width: 50%;
 		float: right;
 
-	&__sliders-position
-		padding-left: 10%;
-		padding-bottom: 6%;
+		& .rangeslider-continuous_horizontal
+			margin-bottom: 6%;
+
+		& .toggle
+			margin-left: 0.5rem;
+
+		& .tick-box
+			margin-left: 1rem;
+
+.clearfix::after
+	content: " ";
+	display: table;
+	clear: both;
+
+@media screen and (max-width: 700px) {
+	html, body {
+		padding: 0;
+		margin: 0;
+	}
+  .container {
+    width: 250px;
+  }
+	  .container__left {
+		float: none;
+		width: inherit;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+  }
+	.container .container__left > *, .container .container__right  > * {
+		padding-left: 0;
+		left: 0;
+	}
+
+  .container__right {
+		float: none;
+		width: inherit;
+		padding-left: 0;
+		left: 0;
+  }
+}
