--- a/src/blocks/messager/messager.pug
+++ b/src/blocks/messager/messager.pug
@@ -3,41 +3,42 @@ include ../standart-button/standart-button.pug
 mixin messager(user)
 	if !user
 		- user = {}
-	.messager
-		.messager__friend
-			.messager__friend_name= user.name ? user.name : 'Anonymous'
-			.messager__friend-information
-				.messager__vertical-position
-					img(src= user.photo ? user.photo : '.\\blocks\\messager\\img\\messager__default-avatar.jpg', alt='avatar',
-					class='messager__friend-information_photo')
-		.messager__actions
-			a(class="messager__actions_message", href="#")
-			a(class="messager__actions_photo", href="#")
-		.messager__chatlogs
-			.messager__chat.messager__chat_friend
-				p.messager__message Hey! So are we cool to meet at the art gallery? Say 8pm
-			.messager__chat.messager__chat_self
-				p.messager__message What's up..!!
-			.messager__chat.messager__chat_friend
-				p.messager__message.
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-					Mollitia laborum veritatis molestiae aliquam iusto officia sed 
-					deleniti quidem laboriosam. Dolor sapiente consequuntur nobis 
-					officia qui, distinctio provident, dolores veritatis voluptatibus!
-			.messager__chat.messager__chat_self
-				p.messager__message.
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-					Mollitia laborum veritatis molestiae aliquam iusto officia sed 
-					deleniti quidem laboriosam. Dolor sapiente consequuntur nobis 
-					officia qui, distinctio provident, dolores veritatis voluptatibus!
-			.messager__chat.messager__chat_friend
-				p.messager__message.
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-					Mollitia laborum veritatis molestiae aliquam iusto officia sed 
-					deleniti quidem laboriosam. Dolor sapiente consequuntur nobis 
-					officia qui, distinctio provident, dolores veritatis voluptatibus!
-		.messager__form
-			.messager__textarea
-				textarea
-			.messager__button-reply
-				+standart-button('normal','normal','reply')
+	.messager__container
+		.messager
+			.messager__friend
+				.messager__friend_name= user.name ? user.name : 'Sarah Brown'
+				.messager__friend-information
+					.messager__vertical-position
+						img(src= user.photo ? user.photo : '.\\blocks\\messager\\img\\messager__default-avatar.jpg', alt='avatar',
+						class='messager__friend-information_photo')
+			.messager__actions
+				a(class="messager__actions_message", href="#")
+				a(class="messager__actions_photo", href="#")
+			.messager__chatlogs
+				.messager__chat.messager__chat_friend
+					p.messager__message Hey! So are we cool to meet at the art gallery? Say 8pm
+				.messager__chat.messager__chat_self
+					p.messager__message What's up..!!
+				.messager__chat.messager__chat_friend
+					p.messager__message.
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+						Mollitia laborum veritatis molestiae aliquam iusto officia sed 
+						deleniti quidem laboriosam. Dolor sapiente consequuntur nobis 
+						officia qui, distinctio provident, dolores veritatis voluptatibus!
+				.messager__chat.messager__chat_self
+					p.messager__message.
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+						Mollitia laborum veritatis molestiae aliquam iusto officia sed 
+						deleniti quidem laboriosam. Dolor sapiente consequuntur nobis 
+						officia qui, distinctio provident, dolores veritatis voluptatibus!
+				.messager__chat.messager__chat_friend
+					p.messager__message.
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+						Mollitia laborum veritatis molestiae aliquam iusto officia sed 
+						deleniti quidem laboriosam. Dolor sapiente consequuntur nobis 
+						officia qui, distinctio provident, dolores veritatis voluptatibus!
+			.messager__form
+				.messager__textarea
+					textarea
+				.messager__button-reply
+					+standart-button('normal','normal','reply')
