--- a/src/blocks/user-profile/user-profile.pug
+++ b/src/blocks/user-profile/user-profile.pug
@@ -2,10 +2,10 @@ mixin user-profile(options)
 	if !options
 		- options = {}
 	.user-profile
-		img(class= 'user-profile__avatar' src= options.imgsrc ? options.imgsrc : '.\\blocks\\user-profile\\img\\user-profile__default-avatar.jpg')
+		img(class= 'user-profile__avatar' src= options.imgsrc ? '.\\blocks\\user-profile\\img\\' + options.imgsrc : '.\\blocks\\user-profile\\img\\user-profile__default-avatar.jpg')
 		.user-profile__info(class= options.imgsrc ? 'user-profile__info_active' : '')
-			.user-profile__name= options.name ? options.name : 'Anonymous'
-			.user-profile__proffesion= options.proffesion ? options.proffesion : 'Unknown'
+			.user-profile__name= options.name ? options.name : 'Sarah Brown'
+			.user-profile__proffesion= options.proffesion ? options.proffesion : 'developer'
 			.user-profile__links
 				a.user-profile__link_facebook.user-profile__link(
 					href=options['facebook'] ? options['facebook'] : '#', 
