Добавлена первая страница (не доделана)

--- a/src/blocks/messager/messager.styl
+++ b/src/blocks/messager/messager.styl
@@ -1,6 +1,7 @@
 $messager-background-color = #F2F2F2;
 
-$friend-information-background-color = #28A290;
+$friend-information-background-color = #46AB9D;
+$friend-name-background-color = #4EB7A8;
 $friend-photo-border-color = #E5E5E5;
 $friend-name-color = #FFF;
 $friend-actions-color = #8E8D8D;
@@ -60,7 +61,7 @@ $textarea-focus-color = #fff;
 
 		&_name
 			text-align: center;
-			background-color: $friend-information-background-color;
+			background-color: $friend-name-background-color;
 			color: $friend-name-color;
 			font-family: LatoWebLight, 'Arial';
 			font-size: 1.9rem;
