--- a/src/index.pug
+++ b/src/index.pug
@@ -1,121 +1,14 @@
-doctype html
+<!DOCTYPE html>
 html(lang="en")
-  head
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    title Site_2
-    script(src= 'https://maps.googleapis.com/maps/api/js?key=AIzaSyAfaOl0X5qQf4yJIocRvRey0yE9liHwVIA')
-  body
-  include blocks/arrow-button/arrow-button.pug
-  include blocks/percentages/percentages.pug
-  include blocks/pie-chart/pie-chart.pug
-  include blocks/slider-discret/slider-discret.pug
-  include blocks/standart-button/standart-button.pug
-  include blocks/slider-continuous/slider-continuous.pug
-  include blocks/stages/stages.pug
-  include blocks/toggle/toggle.pug
-  include blocks/tick-box/tick-box.pug
-  include blocks/user-profile/user-profile.pug
-  include blocks/feedback/feedback.pug
-  include blocks/search/search.pug
-  include blocks/drop-down/drop-down.pug
-  include blocks/news/news.pug
-  include blocks/event/event.pug
-  include blocks/location/location.pug
-  include blocks/calendar/calendar.pug
-  include blocks/messager/messager.pug
-  include blocks/video/video.pug
-  .container
-    .container__center
-      h2 standart buttons
-
-      +standart-button('normal','small','button')
-      +standart-button('normal','normal','button')
-      +standart-button('error','normal','button')
-      +standart-button('error','small','button')
-
-      h2 arrow buttons
-
-      +arrow-button('left', 'inactive')
-      +arrow-button('right', 'inactive')
-      +arrow-button('left', 'disabled')
-      +arrow-button('right', 'disabled')
-      +arrow-button('left', 'enabled')
-      +arrow-button('right', 'enabled')
-
-      h2 percentages/pie chart
-
-      +percentages(0)
-      +percentages(38)
-      +percentages(62)
-      +percentages(89)
-      +pie-chart('12, 25, 30, 33')
-
-      h2 sliders
-    .container__center.clearfix
-        .container__left
-            +slider-discret()
-        .container__right
-            +slider-continuous()
-    .container__center.clearfix
-      h2 stages
-      +stages(5,3)
-    .container__center.clearfix
-      h2 form elements
-      .container__left
-          +feedback()
-      .container__right
-        h2 toggles
-        +toggle('on','off')
-        +toggle('on','off',true)
-        h2 tick boxes
-        +tick-box(true)
-        +tick-box()
-    .container__center.clearfix
-      .container__left
-        h2 search / drop-down
-        +search()
-        +drop-down(['Orange','Apple','Pear'])
-      .container__right
-        h2 user profile
-        +user-profile({
-        imgsrc: 'john.jpg',
-        name: 'John Smith',
-        proffesion: 'developer',
-        'facebook':'123',
-        'twitter':'321',
-        'dribbble':'hah'
-        })
-
-        +user-profile()
-    .container__center.clearfix
-      h2 news & events
-      .container__left
-        +news({
-          title: 'It\'s all going downhill',
-          date: '24 august 2014',
-          description: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed condimentum aliquet venenatis. Etiam a nisi nunc, a tincidunt eros.'
-        })
-      .container__right
-        +event({
-          title: 'this is the title',
-          day: '24',
-          month: 'aug',
-          description: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'
-        })
-
-    .container__center.clearfix
-      h2 location
-      +location()
-
-    .container__center.clearfix
-      .container__left
-        h2 calendar
-        +calendar()
-      .container__right
-        h2 messaging
-        +messager()
-    .container__center.clearfix
-      h2 video
-      +video()
+head
+  meta(charset="UTF-8")
+  meta(name="viewport", content="width=device-width, initial-scale=1.0")
+  meta(http-equiv="X-UA-Compatible", content="ie=edge")
+  title Путеводитель
+body
+  ol
+    li
+       a(href="main.html") Страница макета
+    br
+    li
+      a(href="market.html") Главная страница магазина
