--- a/src/blocks/market/market.pug
+++ b/src/blocks/market/market.pug
@@ -1,15 +1,33 @@
 mixin market__header()
+	.market__helper
+		+messager({
+			bkg_name: 'market__helper_bkg',
+			bkg_info: 'market__helper-info_bkg',
+			name: 'Support',
+			photo: '.\\blocks\\market\\img\\helper.jpg',
+			btn_bkg: 'market__helper-button',
+			btn_clr: 'market__helper-button_text'
+		})
+		.market__helper_close close
 	.market__header
 		h1.market__brand  Craft Market
 		.market__search
-			+search()
+			+search({bkg: 'market__search-submit-bkg'})
 		a(href="#" class="market__login-link") Вход
 		a(href="#" class="market__registration-link") Регистрация
 		a(href="#" class="market__helper-link") Помощь
 		a(href="#" class="market__basket-link") 0
 
 mixin market__stuff(options)
-	.market__stuff
-		img.market__stuff-img(src= options.imgsrc)
-		div.market__stuff-name= options.name
-		div.market__stuff-price= options.price + ' ₽'
+	.market__stuff-container
+		+arrow-button({state: 'inactive', direction: 'left', color: 'market__arrow-button_blue'})
+		.market__stuff-slider
+			ul.market__slides
+				each option in options
+					li.market__slide
+						.market__stuff
+							img.market__stuff-img(src= option.imgsrc)
+							a.market__stuff-name(href=option.name)= option.name
+							div.market__stuff-price= option.price + ' ₽'
+							+standart-button({type: 'normal', size: 'normal', text: 'купить', bkg: 'market__buy-button', text_color: 'market__buy-button-text'})
+		+arrow-button({state: 'inactive', direction: 'right', color: 'market__arrow-button_blue'})
