--- a/src/blocks/market/market.styl
+++ b/src/blocks/market/market.styl
@@ -7,7 +7,7 @@
 	&__header
 		display: flex;
 		font-family: LatoWebBlack, 'Arial';
-		background-color: lighten(#E75735, 10);
+		background-color: #E0AD82;
 		justify-content: space-between;
 		flex-grow: 1;
 		width: 100%;
@@ -41,6 +41,31 @@
 		color: white;
 		flex-grow: 1;
 
+	&__helper
+		display: none;
+		position: absolute;
+		z-index: 100;
+
+		&_close
+			width: 100%;
+			font-size: 0.8rem;
+			text-align: center;
+			padding: 5px;
+			cursor: pointer;
+			text-transform: uppercase;
+			font-family: LatoWebBlack, 'Arial';
+			background-color: white;
+			border: 1px solid rgba(0,0,0,0.1);
+			flex: initial;
+			writing-mode: vertical-rl;
+			opacity: 0.4;
+
+		&_close:hover
+			opacity: 0.8;
+
+		& > *:first-child
+			flex: none;
+
 	&__search
 		flex-grow: 1;
 
@@ -55,7 +80,7 @@
 			font-family: LatoWebBlack, 'Arial';
 			font-size: 1.5rem;
 			text-transform: capitalize;
-			padding: 1% 0 2% 0;
+			padding: 2% 0 4% 0;
 
 	&__top-day-stuff
 		height: 10rem;
@@ -65,21 +90,48 @@
 		& > *
 			justify-content: center;
 
-	&__stuff-container
+	&__stuffs-container
 		display: flex;
 
-	&__stuff
-		margin-left: 30%;
-		margin-right: 30%;
+	&__stuff-container
+		display: flex;
+		align-items: center;
+
+	&__stuff-slider
+		margin-left: 6%;
+		margin-right: 6%;
 		margin-top: 5%;
+		padding-bottom: 1%;
+		display: flex;
+		flex-direction: column;
+		outline: 1px solid gray;
+		outline-offset: 10px;
+		overflow: hidden;
+		width: 180px;
+
 
 		& > *
 			text-align: center;
 			font-family: LatoWebBlack, 'Arial';
 
+	&__slides
+		width: 6000px;
+		list-style-type: none;
+
+		& > li
+			height: 0;
+
+	&__stuff
+		float: left;
+
+
 	&__stuff-img
 		width: 180px;
 		height: 150px;
+
+	&__stuff-name
+		display: block;
+		margin: 2% 0;
 
 	&__user_gold.user-profile__info
 		background: gold;
@@ -89,3 +141,32 @@
 
 	&__user_bronze.user-profile__info
 		background: #cc9966;
+
+	&__buy-button.standart-button__button
+		box-shadow: 0 0.15rem 0 0 darken(#8EC0F4, 10);
+		background-color: #8EC0F4;
+		border: 1px solid #8EC0F4;
+
+	&__buy-button-text.standart-button
+		color: darken(#8EC0F4, 10)
+
+	&__search-submit-bkg.search__submit
+		background-color: darken(#E0AD82, 10);
+
+	&__arrow-button_blue.arrow-button__arrow, &__arrow-button_blue.arrow-button
+		color: lighten(#E0AD82, 10);
+		border-color: lighten(#E0AD82, 10);
+
+	&__helper_bkg.messager__friend_name
+		background: darken(#E0AD82, 15);
+
+	&__helper-info_bkg.messager__friend-information
+		background: darken(#E0AD82, 20);
+
+	&__helper-button.standart-button__button
+		box-shadow: 0 0.15rem 0 0 darken(#E0AD82, 20);
+		background-color: darken(#E0AD82, 15);
+		border: 1px solid darken(#E0AD82, 15);
+
+	&__helper-button_text.standart-button
+		color: darken(#E0AD82, 20)
