--- a/src/blocks/messager/messager.pug
+++ b/src/blocks/messager/messager.pug
@@ -1,15 +1,15 @@
 include ../standart-button/standart-button.pug
 
-mixin messager(user)
-	if !user
-		- user = {}
+mixin messager(options)
+	if !options
+		- options = {}
 	.messager__container
 		.messager
 			.messager__friend
-				.messager__friend_name= user.name ? user.name : 'Sarah Brown'
-				.messager__friend-information
+				.messager__friend_name(class= options.bkg_name ? options.bkg_name : '')= options.name ? options.name : 'Sarah Brown'
+				.messager__friend-information(class= options.bkg_info ? options.bkg_info : '')
 					.messager__vertical-position
-						img(src= user.photo ? user.photo : '.\\blocks\\messager\\img\\messager__default-avatar.jpg', alt='avatar',
+						img(src= options.photo ? options.photo : '.\\blocks\\messager\\img\\messager__default-avatar.jpg', alt='avatar',
 						class='messager__friend-information_photo')
 			.messager__actions
 				a(class="messager__actions_message", href="#")
@@ -41,4 +41,10 @@ mixin messager(user)
 				.messager__textarea
 					textarea
 				.messager__button-reply
-					+standart-button('normal','normal','reply')
+					+standart-button({
+										type: 'nomral',
+										size: 'normal',
+										text: 'reply',
+										bkg: options.btn_bkg,
+										text_color: options.btn_clr
+					})
