--- a/src/blocks/search/search.pug
+++ b/src/blocks/search/search.pug
@@ -1,5 +1,7 @@
-mixin search()
+mixin search(options)
+	if !options
+		- options = {}
 	.search
 		form.search__form
 			input(type='text', placeholder='Search').search__input
-			button(type='button').search__submit
+			button(type='button' class=options.bkg ? options.bkg : '').search__submit
