--- a/src/market.pug
+++ b/src/market.pug
@@ -15,14 +15,26 @@ body
 include blocks/search/search.pug
 include blocks/market/market.pug
 include blocks/user-profile/user-profile.pug
+include blocks/standart-button/standart-button.pug
+include blocks/arrow-button/arrow-button.pug
+include blocks/messager/messager.pug
 .market__container 
 	+market__header()
 	.market__top-day-sellers
 		h2.market__top-day-sellers-text продавцы дня
-		.market__stuff-container
+		.market__stuffs-container
 			.market__top-day-stuff #[+user-profile({imgsrc: 'av1.jpg', name: 'Андрей Иванов', proffesion: 'г. Томск', bkg: 'market__user_gold'})]
-				+market__stuff({imgsrc: './blocks/market/img/pegasus.jpg', name: 'Пегас Сатана', price: '7200'})
+				+market__stuff([{imgsrc: './blocks/market/img/pegasus.jpg', name: 'Пегас Сатана', price: '7200'},
+					{imgsrc: './blocks/market/img/hare.jpg', name: 'Милый Кролик', price: '5000'},
+					{imgsrc: './blocks/market/img/mouse.jpg', name: 'Коврик Мышь', price: '700'}
+				])
 			.market__top-day-stuff #[+user-profile({imgsrc: 'av3.jpg', name: 'Елена Суркова', proffesion: 'г. Северск', bkg: 'market__user_silver'})]
-				+market__stuff({imgsrc: './blocks/market/img/hare.jpg', name: 'Милый Кролик', price: '5000'})
+				+market__stuff([{imgsrc: './blocks/market/img/2-1.jpg', name: 'Мужской чокер', price: '3600'},
+					{imgsrc: './blocks/market/img/2-2.jpg', name: 'Рюкзак Коровка', price: '1500'},
+					{imgsrc: './blocks/market/img/2-3.jpg', name: 'Даниэль', price: '6000'}
+				])
 			.market__top-day-stuff #[+user-profile({imgsrc: 'av2.jpg', name: 'Сергей Ерёхин', proffesion: 'г. Кемерово', bkg: 'market__user_bronze'})]
-				+market__stuff({imgsrc: './blocks/market/img/mouse.jpg', name: 'Коврик Мышь', price: '700'})
+				+market__stuff([{imgsrc: './blocks/market/img/3-1.jpg', name: 'Деревянный дом', price: '4000'},
+					{imgsrc: './blocks/market/img/3-2.jpg', name: 'Плед 150х100 см', price: '4700'},
+					{imgsrc: './blocks/market/img/3-3.jpg', name: 'Плед 200х100 см', price: '7000'}
+				])
