--- a/src/blocks/user-profile/user-profile.styl
+++ b/src/blocks/user-profile/user-profile.styl
@@ -20,6 +20,7 @@ $link-active-hover = #E75735;
 		background-position: center;
 		border: 3px solid $avatar-background ;
 		border-radius: 50%;
+		align-self: center;
 
 	&__name
 		overflow: hidden;
@@ -41,7 +42,6 @@ $link-active-hover = #E75735;
 		flex-direction: column;
 		justify-content: center;
 		min-width: 9.4rem;
-		max-width: 6rem;
 		background-color: $info-background;
 		color: $info-text;
 		margin-left: 0.7rem;
