--- a/src/index.pug
+++ b/src/index.pug
@@ -6,9 +6,11 @@ head
   meta(http-equiv="X-UA-Compatible", content="ie=edge")
   title Путеводитель
 body
-  ol
+  ul
     li
        a(href="main.html") Страница макета
     br
     li
       a(href="market.html") Главная страница магазина
+    li
+      a(href="stuff.html") Страница товара
