--- a/src/blocks/stages/stages.styl
+++ b/src/blocks/stages/stages.styl
@@ -4,7 +4,7 @@ $complete-active-color = #FFF;
 
 $inactive-color = #E5E5E5;
 
-.stages {
+.stages
 	list-style: none;
 	margin: 0;
 	padding: 0;
@@ -12,63 +12,62 @@ $inactive-color = #E5E5E5;
 	table-layout: fixed;
 	width: 100%;
 	color: $stages-text-color;
-}
 
-.stages > li {
-	position: relative;
-	display: table-cell;
-	text-align: center;
-	font-size: 0.8em;
-}
 
-.stages > li:before {
-	content: attr(data-step);
-	display: block;
-	margin: 0 auto;
-	background: $inactive-color;
-	width: 2.5em;
-	height: 2.5em;
-	text-align: center;
-	margin-bottom: 0.25em;
-	line-height: 2.5em;
-	border-radius: 100%;
-	position: relative;
-	z-index: 1000;
-	font-family: LatoWebBlack, 'Arial';
-}
+	& > li
+		position: relative;
+		display: table-cell;
+		text-align: center;
+		font-size: 0.8em;
 
-.stages > li:after {
-	content: '';
-	position: absolute;
-	display: block;
-	background: $inactive-color;
-	width: 100%;
-	height: 0.5em;
-	top: 1em;
-	left: 50%;
-	margin-left: 1.5em\9;
-	z-index: -1;
-}
 
-.stages > li:last-child:after {
-	display: none;
-}
+		&:before
+			content: attr(data-step);
+			display: block;
+			margin: 0 auto;
+			background: $inactive-color;
+			width: 2.5em;
+			height: 2.5em;
+			text-align: center;
+			margin-bottom: 0.25em;
+			line-height: 2.5em;
+			border-radius: 100%;
+			position: relative;
+			z-index: 1000;
+			font-family: LatoWebBlack, 'Arial';
 
-.stages > li.stages_complete {
-	color: $complete-active-background;
-}
+		&:after
+			content: '';
+			position: absolute;
+			display: block;
+			background: $inactive-color;
+			width: 100%;
+			height: 0.5em;
+			top: 1em;
+			left: 50%;
+			margin-left: 1.5em\9;
+			z-index: -1;
 
-.stages > li.stages_complete:before, .stages > li.stages_complete:after {
-	color: $complete-active-color;
-	background: $complete-active-background;
-}
 
-.stages > li.stages_active {
-	color: $complete-active-background;
-}
+		&:last-child:after
+			display: none;
 
-.stages > li.stages_active:before {
-	color: $complete-active-color;
-	background: $complete-active-background;
-}
+
+		&.stages_complete
+			color: $complete-active-background;
+
+
+		&.stages_complete:before, &.stages_complete:after
+			color: $complete-active-color;
+			background: $complete-active-background;
+
+
+		&.stages_active
+			color: $complete-active-background;
+
+
+		&.stages_active:before
+			color: $complete-active-color;
+			background: $complete-active-background;
+
 
