--- a/src/blocks/location/location.pug
+++ b/src/blocks/location/location.pug
@@ -3,7 +3,7 @@ mixin location(options)
 		- options = {}
 	.location
 		.location__map(data-lat= options.lat ? options.lat : '37.79128631', data-lng= options.lng ? options.lng : '-122.41516113')
-		.location__banner
+		.location__banner(class= options.banner_bkg ? options.banner_bkg : '')
 			span.location__phrase= options.phrase ? options.phrase : 'Meet us!'
 			.location__adress= options.adress ? options.adress : '1259 california st san francisco, ca'
 			.location__icon.location__icon_crosshairs
