--- a/src/index.pug
+++ b/src/index.pug
@@ -14,3 +14,5 @@ body
       a(href="market.html") Главная страница магазина
     li
       a(href="stuff.html") Страница товара
+    li
+      a(href="seller.html") Страница продавца
