--- a/src/main.pug
+++ b/src/main.pug
@@ -114,7 +114,8 @@ html(lang="en")
           title: 'this is the title',
           day: '24',
           month: 'aug',
-          description: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'
+          description: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.',
+          btn_text: 'add to calendar'
         })
 
     .container__center.clearfix
