--- a/src/blocks/location/location.styl
+++ b/src/blocks/location/location.styl
@@ -5,32 +5,40 @@ $banner-text-color = #FFF;
 
 	&__map
 		height: 12.3rem;
+		min-width: 34rem;
 
 	&__banner
 		display: flex;
 		background-color: $banner-background-color;
 		font-family: LatoWebLight, 'Arial';
 		color: $banner-text-color ;
-		padding-top: 3%;
-		padding-bottom: 3%;
 
 		& > *:last-child
-			padding-left: 4%;
+			padding-right: 5%;
+
+		& > *:first-child
+			padding-left: 5%;
+
+		& > *
+			padding: 3% 2%;
 
 	&__phrase
 		font-size: 1.9rem;
-		padding-left: 4.5%;
+		flex-shrink: 0;
 
 	&__adress
 		text-transform: uppercase;
 		font-family: LatoWebBlack, 'Arial';
 		font-size: 0.85rem;
-		padding-left: 4.5%;
-		padding-right: 10.5%;
+		text-align: left;
+		flex-basis: 100%;
+		min-width: 0;
+		align-self: center;
 
 	&__icon
 		font-family: FontAwesome;
 		font-size: 1.8rem;
+		flex-basis: 0;
 
 		&_crosshairs::before
 			display block
