--- a/src/stuff.pug
+++ b/src/stuff.pug
@@ -4,39 +4,47 @@ head
 	meta(charset="UTF-8")
 	meta(name="viewport", content="width=device-width, initial-scale=1.0")
 	meta(http-equiv="X-UA-Compatible", content="ie=edge")
-	title Document
+	title Пегас Сатана
 	style(type='text/css').
 		* {
 				padding: 0;
 				margin: 0;
 				box-sizing: border-box;
 		}
+	script(src= 'https://maps.googleapis.com/maps/api/js?key=AIzaSyAfaOl0X5qQf4yJIocRvRey0yE9liHwVIA')
 body
 include ./blocks/market/market.pug
-include ./blocks/user-profile/user-profile.pug
+include ./blocks/standart-button/standart-button.pug
 include ./blocks/percentages/percentages.pug
 include ./blocks/standart-button/standart-button.pug
 include ./blocks/messager/messager.pug
+include ./blocks/location/location.pug
+include ./blocks/seller/seller.pug
 .stuff
 	+market__header()
-	.stuff__container
-		.stuff__seller
-			+user-profile({imgsrc: 'av1.jpg', name: 'Андрей Иванов', proffesion: 'г. Томск', bkg: 'seller__bkg'
-			})
-			.stuff__seller-reputation
-				.stuff__seller-reputation-text Репутация
-				+percentages(38)
-		.stuff__element
-			.stuff__name Пегас Сатана
-			img.stuff__photo(src= './blocks/market/img/pegasus.jpg', alt='pegasus')
-	.seller__messager
-		.seller__messager_hide hide
-		+messager({
-			bkg_name: 'seller__chat-bkg',
-			bkg_info: 'seller__chat-text',
+	+seller__messager({
+			bkg: 'seller__chat-bkg',
+			text_color: 'seller__chat-text',
 			name: 'Андрей Иванов',
 			photo: '.\\blocks\\user-profile\\img\\av1.jpg',
 			btn_bkg: 'seller__chat-button',
 			btn_clr: 'seller__helper-button_text'
+	})
+	.stuff__container
+		+market__seller({
+			imgsrc: 'av1.jpg', name: 'Андрей Иванов', city: 'г. Томск', bkg: 'seller__bkg', rep: 39
 		})
-
+		.stuff__element
+			.stuff__name Пегас Сатана - 7200 ₽
+			img.stuff__photo(src= './blocks/market/img/pegasus.jpg', alt='pegasus')
+			.stuff__description.
+					Пегас выполнен в технике сухого валяния. Шерсть натуральная 100 %.  Глаза стеклянные. Крылья , натуральные перья. Размер 15 ×17 ×5 см. Отличный подарок или сувенир на любой случай. Почтовая пересылка 250 руб. 
+			.stuff__buy-button
+				+standart-button({type: 'normal', size: 'normal', text: 'купить', bkg: 'market__buy-button', text_color: 'market__buy-button-text'})
+	+location({
+		lat: '56.47591389',
+		lng: '84.95652974',
+		phrase: 'Самовывоз',
+		adress: 'Фрунзе 11б',
+		banner_bkg: 'stuff__location-banner'
+	})
