Доделана третья страница

--- a/src/blocks/market/market.pug
+++ b/src/blocks/market/market.pug
@@ -24,7 +24,7 @@ mixin market__header()
 		a(href="#" class="market__helper-link") Помощь
 		a(href="#" class="market__basket-link") 0
 
-mixin market__stuff(options)
+mixin market__stuffs(options)
 	.market__stuff-container
 		+arrow-button({state: 'inactive', direction: 'left', color: 'market__arrow-button_blue'})
 		.market__stuff-slider
