--- a/src/blocks/news/news.styl
+++ b/src/blocks/news/news.styl
@@ -26,6 +26,8 @@ $text-color = #FFF;
 		font-family: LatoWebLight, 'Arial';
 		font-size: 1.7rem;
 		line-height: 1.7rem;
+		overflow: hidden;
+		text-overflow: ellipsis;
 
 	&__date
 		text-transform: uppercase;
