--- a/src/blocks/feedback/feedback.pug
+++ b/src/blocks/feedback/feedback.pug
@@ -1,6 +1,8 @@
 include ../standart-button/standart-button.pug
 
-mixin feedback()
+mixin feedback(options)
+	if !options 
+		- options = {}
 	.feedback
 		form(action="feedback", class="feedback__form")
 			.feedback__name
@@ -11,7 +13,13 @@ mixin feedback()
 				+validation()
 			textarea(placeholder="Your Message").feedback__textarea
 			.feedback__submit
-				+standart-button('normal','normal','submit')
+				+standart-button({
+					type: 'normal',
+					size: 'normal',
+					text: options.btn_text ? options.btn_text : 'submit',
+					bkg: options.btn_bkg,
+					text_color: options.btn_clr
+				})
 
 mixin validation()
 	div(class="feedback__validation")
