--- a/src/blocks/seller/seller.pug
+++ b/src/blocks/seller/seller.pug
@@ -3,7 +3,7 @@ include ./../standart-button/standart-button.pug
 
 mixin seller__messager(options)
 	.seller__messager
-		.seller__messager_hide hide
+		.seller__messager_hide chat
 		+messager({
 			bkg_name: options.bkg,
 			bkg_info: options.text_color,
@@ -12,3 +12,11 @@ mixin seller__messager(options)
 			btn_bkg:  options.btn_bkg,
 			btn_clr: options.btn_clr
 		})
+
+
+mixin seller__stuff(options)
+	.seller__stuff
+		img.seller__stuff-img(src= options.imgsrc)
+		a.seller__stuff-name(href=options.name)= options.name
+		div.seller__stuff-price= options.price + ' ₽'
+		+standart-button({type: 'normal', size: 'normal', text: 'купить', bkg: 'market__buy-button', text_color: 'market__buy-button-text'})
