--- a/src/seller.pug
+++ b/src/seller.pug
@@ -16,6 +16,7 @@ include ./blocks/market/market.pug
 include ./blocks/seller/seller.pug
 include ./blocks/news/news.pug
 include ./blocks/event/event.pug
+include ./blocks/feedback/feedback.pug
 +market__header()
 .seller
 	+market__seller({
@@ -29,21 +30,61 @@ include ./blocks/event/event.pug
 		btn_bkg: 'seller__chat-button',
 		btn_clr: 'seller__helper-button_text'
 	})
+	.seller__text Новости
 	.seller__events
-		+news({
-			title: 'It\'s all going downhill',
-			date: '24 august 2014',
-			description: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed condimentum aliquet venenatis. Etiam a nisi nunc, a tincidunt eros.'
-		})
 		+event({
 			title: 'СКИДКА НА СТЕКЛО',
-			day: '9',
-			month: 'Февраля',
-			description: 'Скидка на все товары из стекла.',
-			btn_text: 'Получить'
+			day: '17',
+			imgsrc: '.\\blocks\\event\\img\\glass.jpg',
+			month: 'Фев',
+			description: 'Скидка 40% на все товары из стекла.',
+			btn_text: 'Получить',
+			btn_size: 'normal',
+			btn_bkg: 'seller__events-button',
+			btn_clr: 'seller__events-button-text',
+			bkg: 'seller__event_bkg'
 		})
 		+news({
-			title: 'It\'s all going downhill',
-			date: '24 august 2014',
-			description: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed condimentum aliquet venenatis. Etiam a nisi nunc, a tincidunt eros.'
+			bkg: 'seller__news_bkg',
+			title: 'Игрушки из фетра',
+			date: '9 февраля 2017',
+			imgsrc: '.\\blocks\\news\\img\\felt.jpeg',
+			description: 'В продажу поступили игрушки из фетра!'
+		})
+		+news({
+			bkg: 'seller__news_bkg',
+			title: 'Железо',
+			date: '15 декабря 2017',
+			imgsrc: '.\\blocks\\news\\img\\heli.jpg',
+			description: 'Распродажа поделок из советского конструктора.'
+		})
+	.seller__text товар
+	.seller__stuffs
+		+seller__stuff({imgsrc: './blocks/market/img/1-3.jpg', name: 'Пегас Сатана', price: '7200'})
+		+seller__stuff({imgsrc: './blocks/market/img/1-1.jpg', name: 'Милый Кролик', price: '5000'})
+		+seller__stuff({imgsrc: './blocks/market/img/1-2.jpg', name: 'Коврик Мышь', price: '700'})
+		+seller__stuff({imgsrc: './blocks/market/img/1-4.jpg', name: 'Медальница', price: '1300'})
+		+seller__stuff({imgsrc: './blocks/market/img/1-5.jpg', name: 'Записная книжка', price: '2500'})
+	.seller__stuffs
+		+seller__stuff({imgsrc: './blocks/market/img/1-6.jpg', name: 'Картина', price: '1700'})
+		+seller__stuff({imgsrc: './blocks/market/img/1-7.jpg', name: 'Кружка', price: '700'})
+		+seller__stuff({imgsrc: './blocks/market/img/1-8.jpg', name: 'Бульдог', price: '5000'})
+		+seller__stuff({imgsrc: './blocks/market/img/1-9.jpg', name: 'Шкатулка', price: '3000'})
+		+seller__stuff({imgsrc: './blocks/market/img/1-10.jpg', name: 'Мячи из ниток', price: '1500'})
+	.seller__text.seller__comments-count 2 комментария
+	.seller__comments-body
+		ul.seller__comments-list
+			li.seller__comments-item
+				h3
+					| Николай
+				p.seller__comments-comment Прекрасный продовец, я всем доволен!
+			li.seller__comments-item
+				h3
+					| Юрий
+				p.seller__comments-comment Ужасный продавец, я разачарован!
+	.seller__comments-form
+		+feedback({
+			btn_text: 'Отправить',
+			btn_bkg: 'seller__comments-btn',
+			btn_clr: 'seller__comments-btn-text'
 		})
