--- a/src/stuff.pug
+++ b/src/stuff.pug
@@ -36,7 +36,7 @@ include ./blocks/seller/seller.pug
 		})
 		.stuff__element
 			.stuff__name Пегас Сатана - 7200 ₽
-			img.stuff__photo(src= './blocks/market/img/pegasus.jpg', alt='pegasus')
+			img.stuff__photo(src= './blocks/market/img/1-3.jpg', alt='pegasus')
 			.stuff__description.
 					Пегас выполнен в технике сухого валяния. Шерсть натуральная 100 %.  Глаза стеклянные. Крылья , натуральные перья. Размер 15 ×17 ×5 см. Отличный подарок или сувенир на любой случай. Почтовая пересылка 250 руб. 
 			.stuff__buy-button
