Добавлена четвёртая страница (не доделана)

--- a/src/index.pug
+++ b/src/index.pug
@@ -16,3 +16,5 @@ body
       a(href="stuff.html") Страница товара
     li
       a(href="seller.html") Страница продавца
+    li
+      a(href="order.html") Страница оформления заказа
